Update: Add Payment method: Visa for Payment Page
